--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -1,3 +1,13 @@
+body{
+    font-family: Arial;
+    text-align: center;
+    color: #333;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+
 #Container{
     text-align: left;
 border: 1px solid red;
@@ -5,4 +15,8 @@ width: 70%;
 padding: 0;
 margin: 0 auto;
 
+}
+
+#Container-titulo{
+    font-size: 20px;
 }
