--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -14,9 +14,12 @@ border: 1px solid red;
 width: 70%;
 padding: 0;
 margin: 0 auto;
+padding: 1em;
+margin-left: 1em;
 
 }
 
 #Container-titulo{
     font-size: 20px;
+    
 }
