--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -23,3 +23,12 @@ margin-left: 1em;
     font-size: 20px;
     
 }
+
+#cabecera{
+    background: #88f;
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+}
