--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -14,8 +14,6 @@ border: 1px solid red;
 width: 70%;
 padding: 0;
 margin: 0 auto;
-padding: 1em;
-margin-left: 1em;
 
 }
 
@@ -31,4 +29,13 @@ margin-left: 1em;
     padding: 0.5em;
     font-weight: bold;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+}
+
+#post{
+    padding: 1em;
+}
+
+#logo{
+    width: 20px;
+    vertical-align: middle;
 }
